# ai-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  INSTALL.md  INSTALLATION_GUIDE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
ai-cli/: cli.py
ai-cli/config/: manager.py  models.py
ai-cli/core/: chat.py  messages.py
ai-cli/providers/: base.py  factory.py  litellm_provider.py
ai-cli/ui/: interactive.py  streaming.py
ai-cli/utils/: env.py
ai_cli/: cli.py
ai_cli/config/: manager.py  models.py
ai_cli/core/: chat.py  messages.py  roles.py
ai_cli/providers/: litellm_provider.py
ai_cli/utils/: env.py
examples/: README.md  basic-roundtable.toml  code-review.toml  creative-writing.toml  debate-format.toml  domain-brainstorming.toml  multi-model-roundtable.toml  problem-solving.toml  research-analysis.toml
scripts/: publish.sh
src/ai_cli/: cli.py
src/ai_cli/config/: manager.py  models.py
src/ai_cli/utils/: text.py
tests/: conftest.py  test_chat_engine.py  test_cli.py  test_cp_command.py  test_init_command.py  test_models.py  test_role_based_roundtable.py
