[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli"
version = "0.1.0"
description = "Multi-model AI CLI with round-table discussions"
authors = [{name = "AI CLI Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "litellm>=1.17.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
tui = ["textual>=0.44.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
ai = "ai-cli.cli:app"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.mypy]
python_version = "3.9"
strict = true

[tool.black]
line-length = 88
target-version = ['py39']