[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli"
version = "0.1.0"
description = "Multi-model AI CLI with round-table discussions"
authors = [{name = "AI CLI Developer", email = "dev@example.com"}]
maintainers = [{name = "AI CLI Developer", email = "dev@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "cli", "chatgpt", "claude", "llm", "roundtable", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "litellm>=1.17.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
tui = ["textual>=0.44.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "twine>=4.0",
]

[project.scripts]
ai = "ai_cli.cli:app"

[project.urls]
Homepage = "https://github.com/ai-cli/ai-cli"
Repository = "https://github.com/ai-cli/ai-cli"
Documentation = "https://github.com/ai-cli/ai-cli#readme"
Issues = "https://github.com/ai-cli/ai-cli/issues"
Changelog = "https://github.com/ai-cli/ai-cli/releases"

[tool.hatch.build.targets.wheel]
packages = ["ai_cli"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
unfixable = ["B"]

[tool.ruff.format]
# Ruff formatting configuration (replaces Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B018"]  # Allow "useless" expressions in tests

# MyPy configuration is now in mypy.ini to avoid conflicts

[dependency-groups]
dev = [
    "types-toml>=0.10.8.20240310",
]
